@@ -6,6 +6,9 @@
 	  Improve tail call optimization for __z88dk_callee functions.
 	* tests/stm8-conventions.c:
 	  Enable test that had been disabled due to now-fixed bug #3239.
+	* src/stm8/peep.c,
+	  support/regression/tests/bug-3256.c:
+	  Fix bug #3256.
 
 2021-06-15 Philipp Klaus Krause <pkk AT spth.de>
 
